--- a/oas-env/oas/static/CSS/contact.css
+++ b/oas-env/oas/static/CSS/contact.css
@@ -64,8 +64,8 @@ input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid
 }
 
 .styled-input input {
-    width: calc(100% - 100px); /* Adjust width considering the label */
-    float: left; /* Ensure input and label are aligned */
+    width: calc(100% - 10px); 
+    float: left;
 }
 
 .styled-input.wide {
