--- a/oas-env/oas/static/CSS/contact.css
+++ b/oas-env/oas/static/CSS/contact.css
@@ -226,3 +226,17 @@ textarea {
         width: auto; /* Back to original width on larger screens */
     }
 }
+
+
+
+
+
+
+
+.map-content{
+    padding-top: 85px;
+    min-height: 100vh;
+    padding-left: 15px;
+    padding-right: 15px;
+
+}
