--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -66,7 +66,7 @@
                         <div class="offcanvas-body">
                           <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="/">Home</a>
+                              <a class="nav-link active" aria-current="page" href="/" style="color: white;">Home</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="{% url 'about' %}">About us</a>
