--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -48,7 +48,7 @@
           <div class="mid-bar">
               <div class="mid-bar-inner">
                 <div class="header-logo">
-                  <img src="{% static 'img/Auction-logo.png' %}" alt="Logo">
+                  <img src="{% static 'img/b1.jpg' %}" alt="Logo">
                 </div>
                 <!-- /.header-logo -->
           
