--- a/oas-env/oas/templates/register.html
+++ b/oas-env/oas/templates/register.html
@@ -10,6 +10,17 @@
    <link rel="stylesheet" href="{% static 'CSS/register.css' %}" />
 </head>
 
+
+<div class="register-heading">
+  <div class="container">
+    <div class="container-heading-inner justify-content-center">
+      <h1><b>Join Us Today</b></h1>
+      <br>
+      <p>Start Your Journey Unlock Exclusive Access!</p>
+    </div><!-- /.container-heading-inner -->
+  </div><!-- /.container -->
+</div><!-- /.register-heading -->
+
 <section>
 
 
