--- a/oas-env/oas/templates/register.html
+++ b/oas-env/oas/templates/register.html
@@ -17,7 +17,7 @@
 
   <div class="register-heading">
     <div class="container">
-      <div class="container-heading-inner justify-content-center">
+      <div class="container-heading-inner justify-content-center align-items-center">
         <h1><b>Join Us Today</b></h1>
         <br>
         <p>Start Your Journey Unlock Exclusive Access!</p>
