--- a/oas-env/oas/templates/register.html
+++ b/oas-env/oas/templates/register.html
@@ -19,32 +19,32 @@
         <form method="post" action="{% url 'register-user' %}">
            {% csrf_token %}
               <div class="row mb-3">
-                 <label for="username" class="col-sm-12 col-form-label">Username</label>
+                 <label for="username" class="col-sm-12 col-form-label" style="color: black;">Username</label>
                  <div class="col-sm-10">
                    <input type="text" class="form-control" id="username" name="username">
                  </div>
               <div class="row mb-3">
-                <label for="email" class="col-sm-12 col-form-label">Email</label>
+                <label for="email" class="col-sm-12 col-form-label" style="color: black;">Email</label>
                 <div class="col-sm-10">
                   <input type="email" class="form-control" id="email" name="email">
                 </div>
               </div>
               <div class="row mb-3">
-                <label for="password" class="col-sm-12 col-form-label">Password</label>
+                <label for="password" class="col-sm-12 col-form-label" style="color: black;">Password</label>
                 <div class="col-sm-10">
                   <input type="password" class="form-control" id="password" name="password">
                 </div>
               </div>
               <div class="row mb-3">
                  <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Create an Account</button>
+                    <button type="submit" class="btn btn-primary" style="color: black;">Create an Account</button>
                   </div>
                </div>
 
                <div class="row mb-3">
                  <div class="col-sm-10">
-                    <span>Already have a Account</span>
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    <span style="color: black;">Already have a Account</span>
+                    <a class="nav-link" href="{% url 'login' %}" style="color: black;">Login</a>
                   </div>
                </div>              
             </form>
