--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -95,6 +95,7 @@
           {% if product.category == '1st-Auction' %}
           <div class="col-md-4">
             <div class="card">
+              <!-- Timer Overlay -->
               <div class="timer-overlay" id="timer-{{ forloop.counter }}" data-countdown="{{ product.countdown_date }}">
                 <div class="count">
                   <div class="co">
@@ -111,11 +112,13 @@
                   </div>
                 </div>
               </div>
-              <img src="media/{{product.image}}" class="card-img-top" alt="..."/>
+              <!-- Product Image -->
+              <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}"/>
               <div class="card-body">
-                <h5 class="card-title">{{product.title}}</h5>
-                <p class="card-text"><b>{{product.description}}</b></p>
-                <a href="{% url 'cart' %}" class="btn btn-success">BUY NOW</a>
+                <h5 class="card-title">{{ product.title }}</h5>
+                <p class="card-text"><b>{{ product.description }}</b></p>
+                <!-- Buy Now Button (Link to Product Detail Page) -->
+                <a href="{% url 'product_detail' product.id %}" class="btn btn-success">BUY NOW</a>
                 <i class="bi bi-share-fill justify-content-end"></i>
               </div>
             </div>
@@ -124,7 +127,7 @@
           {% endfor %}
         </div>
       </div>
-    </div>    
+    </div>
 
 
 
