--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -113,7 +113,7 @@
                 </div>
               </div>
               <!-- Product Image -->
-              <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}"/>
+              <img src="media/{{product.image}}" class="card-img-top" alt="{{ product.title }}"/>
               <div class="card-body">
                 <h5 class="card-title">{{ product.title }}</h5>
                 <p class="card-text"><b>{{ product.description }}</b></p>
