--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -91,7 +91,7 @@
     <div class="bid-cards">
       <div class="container">
         <div class="row">
-          {% for product in products %}
+          {% for Product in products %}
           {% if product.category == '1st-Auction' %}
           <div class="col-md-4">
             <div class="card">
