--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -111,7 +111,7 @@
                                       </div>
                                   </div>
                               </div>
-                              <img src="{{ product.image.url }}" class="card-img-top" alt="..."/>
+                              <img src="media/{{product.image}}" class="card-img-top" alt="..."/>
                               <div class="card-body">
                                   <h5 class="card-title">{{ product.title }}</h5>
                                   <p class="card-text"><b>{{ product.description }}</b></p>
