--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -233,7 +233,7 @@
             <p>Acessories</p>
             <h5 class="card-title">{{product.title}}</h5>
             <p class="card-text"><b>{{product.description}}</b></p>
-            <a href="#" class="btn btn-success">BUY NOW</a>
+            <a href="{% url 'product_detail' product.id %}" class="btn btn-success">BUY NOW</a>
             <i class="bi bi-share-fill justify-content-end"></i>
           </div>
         </div>
