--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -37,6 +37,7 @@
 
 
 
+   <div class="card-details">
     <div class="container">
         <div class="product-detail">
             <div class="product-image">
@@ -51,6 +52,8 @@
             </div>
         </div>
     </div>
+
+   </div><!-- /.card-details -->
 
 
 
