--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -48,7 +48,7 @@
                 <p>{{ product.description }}</p>
                 <!-- You can add more details here if needed -->
                 <p>Category: {{ product.category }}</p>
-                <input class="btn btn-success" aria-label="place"><label>place bid</label></input>
+                <button class="btn btn-success">Add to Cart</button>
             </div>
         </div>
     </div>
