--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -93,21 +93,45 @@
           <div class="row">
               {% for product in products %}
                   {% if product.category == '1st-Auction' %}
+                  
+                  
+                <script>
+    var target_mili_sec = new Date("Oct 10, 2024 14:30:0").getTime(); // Properly formatted date string
+
+    function timer() {
+        var now_mili_sec = new Date().getTime();
+        var remaining_sec = Math.floor((target_mili_sec - now_mili_sec) / 1000);
+
+        var day = Math.floor(remaining_sec / (3600 * 24));
+        var hour = Math.floor((remaining_sec % (3600 * 24)) / 3600);
+        var min = Math.floor((remaining_sec % 3600) / 60);
+        var sec = Math.floor(remaining_sec % 60);
+
+        // Using proper concatenation for IDs
+        document.querySelector("#day" + "{{ product.id }}").innerHTML = day;
+        document.querySelector("#hour" + "{{ product.id }}").innerHTML = hour;
+        document.querySelector("#min" + "{{ product.id }}").innerHTML = min;
+        document.querySelector("#sec" + "{{ product.id }}").innerHTML = sec;
+    }
+
+    setInterval(timer, 1000); // Calls the timer function every 1 second
+</script>
+                  
                       <div class="col-md-4">
                           <div class="card">
                               <div class="timer-overlay" id="timer-{{ forloop.counter }}" data-countdown="{{ product.countdown_date }}">
                                   <div class="count">
                                       <div class="co">
-                                          <span class="days">00</span> DAYS
+                                          <span class="days" id="day{{product.id}}">00</span> DAYS
                                       </div>
                                       <div class="co">
-                                          <span class="hours">00</span> HOURS
+                                          <span class="hours" id="hour{{product.id}}">00</span> HOURS
                                       </div>
                                       <div class="co">
-                                          <span class="minutes">00</span> MINUTES
+                                          <span class="minutes" id="min{{product.id}}">00</span> MINUTES
                                       </div>
                                       <div class="co">
-                                          <span class="seconds">00</span> SECONDS
+                                          <span class="seconds" id="sec{{product.id}}">00</span> SECONDS
                                       </div>
                                   </div>
                               </div>
@@ -126,6 +150,7 @@
       </div>
   </div>
   
+
 
 
 
