--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -96,7 +96,7 @@
                   
                   
                 <script>
-                  var bidEndTime = "{{ product.bid_end_time|date:'M d, Y H:i:s'|safe }}";
+                   var bidEndTime = "{{ product.bid_end_time|date:'c'|safe }}";
     var target_mili_sec = new Date(bidEndTime).getTime();
 
     function timer() {
