--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -120,7 +120,7 @@
                   
                       <div class="col-md-4">
                           <div class="card">
-                              <div class="timer-overlay" id="timer-{{ forloop.counter }}" data-countdown="{{ product.countdown_date }}">
+                              <div class="timer-overlay" id="timer-{{ forloop.counter }}" data-countdown="{{ product.bid_end_time }}">
                                   <div class="count">
                                       <div class="co">
                                           <span class="days" id="day{{product.id}}">00</span> DAYS
