--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -319,6 +319,8 @@
                               </div>
                           </div>
                       </div>
+                      {% endif %} 
+        {% endfor %}
     </div>
     <!-- /.row -->
   </div>
