--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -127,7 +127,7 @@
                   
                       <div class="col-md-4">
                           <div class="card">
-                              <div class="timer-overlay" id="timer-{{ forloop.counter }}" data-countdown="{{ product.bid_end_time|date:'c'|safe }}">
+                            <div class="timer-overlay" id="timer-{{ product.id }}" data-countdown="{{ product.bid_end_time|date:'c'|safe }}">
                                   <div class="count">
                                       <div class="co">
                                           <span class="days" id="day{{product.id}}">00</span> DAYS
@@ -254,6 +254,7 @@
 
 
 
+
  <div class="up-auction">
   <div class="container">
     <div class="row">
@@ -263,8 +264,8 @@
 
 
         <script>
-         document.addEventListener("DOMContentLoaded", function () {    var timerElement = document.querySelector("#timer-{{ product.id }}");
-    var bidEndTime = timerElement.getAttribute("data-countdown");
+         document.addEventListener("DOMContentLoaded", function () {  var timerElement = document.querySelector("#timer-{{ product.id }}");
+         var timerElement = document.querySelector("#timer-{{ product.id }}");
     console.log("Bid End Time for Product {{ product.id }}:", bidEndTime); // Debugging line
     var target_mili_sec = new Date(bidEndTime).getTime();
 
@@ -294,7 +295,7 @@
                   
                       <div class="col-md-4">
                           <div class="card">
-                              <div class="timer-overlay" id="timer-{{ forloop.counter }}" data-countdown="{{ product.bid_end_time|date:'c'|safe }}">
+                            <div class="timer-overlay" id="timer-{{ product.id }}" data-countdown="{{ product.bid_end_time|date:'c'|safe }}">
                                   <div class="count">
                                       <div class="co">
                                           <span class="days" id="day{{product.id}}">00</span> DAYS
