--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -264,8 +264,9 @@
 
 
         <script>
-         document.addEventListener("DOMContentLoaded", function () {   console.log("JavaScript for up-auction is running for Product ID {{ product.id }}");  var timerElement = document.querySelector("#timer-{{ product.id }}");
-         var timerElement = document.querySelector("#timer-{{ product.id }}");
+           document.addEventListener("DOMContentLoaded", function () {    var timerElement = document.querySelector("#timer-{{ product.id }}");
+    var bidEndTime = timerElement.getAttribute("data-countdown");
+    console.log("Bid End Time for Product {{ product.id }}:", bidEndTime); // Debugging line
     var target_mili_sec = new Date(bidEndTime).getTime();
 
     if (isNaN(target_mili_sec)) {
