--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -344,6 +344,7 @@ body{
   padding: 20px;
 }
 .bid-cards .card{
+  position: relative;
   transition: all 0.3s;
   margin-top: 30px;
   background-color: black;
@@ -357,6 +358,30 @@ body{
   border-color: white;
   
 }
+
+
+
+.bid-cards .timer-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1; /* Ensure the overlay is behind the link */
+  pointer-events: none; /* Prevent the overlay from blocking interactions */
+}
+
+.bid-cards .card-body {
+  position: relative;
+  z-index: 2; /* Ensure the link is above the overlay */
+}
+
+.bid-cards .btn-success {
+  position: relative;
+  z-index: 3; /* Ensure the button is above all other elements */
+}
+
+
 
 
 
