--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -986,6 +986,7 @@ transition:all 0.5s ease;
 }
 
 .up-auction .card{
+  position: relative;
   transition: all 0.3s;
   margin-top: 30px;
   background-color: black;
@@ -998,7 +999,25 @@ transition:all 0.5s ease;
   
 }
 
+.up-auction .timer-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1; /* Ensure the overlay is behind the link */
+  pointer-events: none; /* Prevent the overlay from blocking interactions */
+}
 
+.up-auction .card-body {
+  position: relative;
+  z-index: 2; /* Ensure the link is above the overlay */
+}
+
+.up-auction .btn-success {
+  position: relative;
+  z-index: 3; /* Ensure the button is above all other elements */
+}
 
 
 
