--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -90,8 +90,7 @@
                 <div class="col-md-6">
                   <div id="slider" class="owl-carousel product-slider">
                 <div class="item">
-                    <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" />
-                </div>
+                    <img src="{{ product.image.url }}" />
                 <div class="item">
                     <img src="https://i.ytimg.com/vi/PJ_zomNMK_s/maxresdefault.jpg" />
                 </div>
