--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -427,6 +427,6 @@
 }
 .owl-carousel .owl-item img {
     display: block;
-    width: 75%;
-    height: 75%;
+    width: 75% !important;
+    height: 75% !important;
 }
