--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -120,6 +120,16 @@
                 </div>
               </div>
             </div>
+             <!-- Input for price -->
+             <form method="POST" action="{% url 'save_price' product.id %}">
+              {% csrf_token %}
+              <label for="price">Enter your price:</label>
+              <input type="number" id="price" name="price" required>
+
+              <!-- Submit button -->
+              <button type="submit" class="btn-submit">Submit Price</button>
+          </form>
+
           </div>
           <!-- Additional content here -->
         </div>
