--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -51,11 +51,12 @@
                     <!-- Input for price -->
                     <form method="POST" action="{% url 'save_price' product.id %}">
                         {% csrf_token %}
-                        <label for="price">Enter your price:</label>
+                        <label for="price">Enter your Bid:</label>
                         <input type="number" id="price" name="price" required>
+                        <br>
     
                         <!-- Submit button -->
-                        <button type="submit" class="btn-submit">Submit Price</button>
+                        <button type="submit" class="btn-submit">Submit Bid</button>
                     </form>
                 </div>
             </div>
