--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -65,6 +65,16 @@
     
 
 
+    <div class="pro-description">
+      <div class="container">
+        <div class="pro-description-inner">
+
+          <p>{{ product.long_description }}</p>
+
+        </div><!-- /.pro-description-inner -->
+      </div><!-- /.containe -->
+    </div><!-- /.pro-description -->
+
 
 
 
