--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -34,6 +34,7 @@
 
 
 
+
 /* General container styling */
 .card-details .container {
     width: 80%;
@@ -108,6 +109,15 @@
 
 
 
+.pro-description-inner {
+    text-align: center;
+    color: white;
+    
+}
+.pro-description-inner span{
+    color: white;
+    font-weight: bolder;
+}
 
 
 
