--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -68,6 +68,7 @@
     <div class="pro-description">
       <div class="container">
         <div class="pro-description-inner">
+          <span><h1>Discovering the {{ product.title }}</h1></span>
 
           <p>{{ product.long_description }}</p>
 
