--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -49,6 +49,8 @@
     justify-content: space-between;
     gap: 30px; /* Add some space between the image and the info */
     flex-wrap: wrap; /* Allow wrapping on smaller screens */
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 /* Product image styling */
@@ -112,7 +114,8 @@
 .pro-description-inner {
     text-align: center;
     color: white;
-    
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .pro-description-inner span{
     color: white;
