--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -48,9 +48,17 @@
                     <p>{{ product.description }}</p>
                     <p>Category: {{ product.category }}</p>
     
-                    <!-- Input for price -->
+                    <!-- Input form for name, email, and price -->
                     <form method="POST" action="{% url 'save_price' product.id %}">
                         {% csrf_token %}
+                        <label for="name">Enter your Name:</label>
+                        <input type="text" id="name" name="name" required>
+                        <br>
+    
+                        <label for="email">Enter your Email:</label>
+                        <input type="email" id="email" name="email" required>
+                        <br>
+    
                         <label for="price">Enter your Bid:</label>
                         <input type="number" id="price" name="price" required>
                         <br>
