--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -37,6 +37,7 @@
 
 
 
+      
       <div class="card-details">
         <div class="container">
             <div class="product-detail">
@@ -48,19 +49,16 @@
                     <p>{{ product.description }}</p>
     
                     <!-- Input form for name, email, and price -->
-                    <form method="POST" action="{% url 'save_price' product.id %}">
+                    <form method="POST" action="{% url 'save_price' product.id %}" class="bid-form">
                         {% csrf_token %}
                         <label for="name">Enter your Name:</label>
-                        <input type="text" id="name" name="name" required>
-                        <br>
+                        <input type="text" id="name" name="name" required placeholder="Your Name">
     
                         <label for="email">Enter your Email:</label>
-                        <input type="email" id="email" name="email" required>
-                        <br>
+                        <input type="email" id="email" name="email" required placeholder="Your Email">
     
                         <label for="price">Enter your Bid:</label>
-                        <input type="number" id="price" name="price" required>
-                        <br>
+                        <input type="number" id="price" name="price" required placeholder="Your Bid">
     
                         <!-- Submit button -->
                         <button type="submit" class="btn-submit">Submit Bid</button>
@@ -70,19 +68,15 @@
         </div>
     </div>
     
-
-
     <div class="pro-description">
-      <div class="container">
-        <div class="pro-description-inner">
-          <span><h1>Discovering the {{ product.title }}</h1></span>
-
-          <p>{{ product.long_description }}</p>
-
-        </div><!-- /.pro-description-inner -->
-      </div><!-- /.containe -->
-    </div><!-- /.pro-description -->
-
+        <div class="container">
+            <div class="pro-description-inner">
+                <span><h1>Discovering the {{ product.title }}</h1></span>
+                <p>{{ product.long_description }}</p>
+            </div>
+        </div>
+    </div>
+    
 
 
 
