--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -55,11 +55,12 @@
 
 /* Product image styling */
 .product-image img {
-    max-width: 300px; /* Set a smaller max width for the image */
-    height: auto;
-    border-radius: 10px; /* Add rounded corners to the image */
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+    width: 80px;
+    height: 85px;
+    border-radius: 10px;
+    object-fit: cover; /* Ensures the image fits nicely within the given dimensions */
 }
+
 
 /* Product info styling */
 .product-info {
