--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -1,4 +1,3 @@
-/* Inner Banner Styling */
 .inner-banner {
     min-height: 400px;
     background: rgba(12, 3, 33, 0.9);
@@ -8,29 +7,56 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    padding: 20px;
 }
 
 .inner-banner-content {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    transform: translate(70px, 160px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 2;
+    text-align: center;
 }
 
 .inner-banner-content h2 {
-    font-size: 50px;
+    font-size: 5vw; /* Make the font size responsive */
     color: white;
+    margin: 0;
 }
 
 .inner-banner-img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
     text-align: right;
+    max-width: 100%;
+    height: auto;
 }
 
+@media (max-width: 768px) {
+    .inner-banner {
+        min-height: 300px;
+    }
 
+    .inner-banner-content h2 {
+        font-size: 6vw; /* Adjust font size for smaller screens */
+    }
 
+    .inner-banner-img {
+        display: none; /* Hide the image on smaller screens */
+    }
+}
 
+@media (max-width: 480px) {
+    .inner-banner {
+        min-height: 200px;
+    }
+
+    .inner-banner-content h2 {
+        font-size: 8vw; /* Further adjust font size for mobile */
+    }
+}
 
 
 
