--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -13,20 +13,18 @@
 .inner-banner-content {
     z-index: 2;
     text-align: left;
-    flex: 1;
+    width: 50%; /* Adjust width to share space with the image */
 }
 
 .inner-banner-content h2 {
-    font-size: 5vw; /* Make the font size responsive */
+    font-size: 5vw;
     color: white;
     margin: 0;
 }
 
 .inner-banner-img {
-    flex: 1;
+    width: 50%; /* Ensure the image container takes up the remaining space */
     text-align: right;
-    max-width: 50%;
-    height: auto;
 }
 
 .inner-banner-img img {
@@ -42,11 +40,12 @@
 
     .inner-banner-content {
         text-align: center;
+        width: 100%;
         margin-bottom: 20px;
     }
 
     .inner-banner-img {
-        max-width: 100%;
+        width: 100%;
         text-align: center;
     }
 
