--- a/oas-env/oas/static/CSS/prodetail.css
+++ b/oas-env/oas/static/CSS/prodetail.css
@@ -12,14 +12,22 @@
 
 .inner-banner-content {
     z-index: 2;
-    text-align: left;
+    display: flex; /* Make the content and image align side by side */
+    align-items: center;
     width: 50%; /* Adjust width to share space with the image */
+    text-align: left;
 }
 
 .inner-banner-content h2 {
-    font-size: 5vw;
+    font-size: 2vw; /* Smaller font size */
     color: white;
     margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.inner-banner-content h2 b {
+    margin-right: 20px; /* Add space between text and image */
 }
 
 .inner-banner-img {
@@ -39,8 +47,8 @@
     }
 
     .inner-banner-content {
-        text-align: center;
         width: 100%;
+        text-align: center;
         margin-bottom: 20px;
     }
 
@@ -50,7 +58,7 @@
     }
 
     .inner-banner-content h2 {
-        font-size: 6vw;
+        font-size: 4vw;
     }
 }
 
@@ -60,11 +68,9 @@
     }
 
     .inner-banner-content h2 {
-        font-size: 8vw;
+        font-size: 5vw;
     }
 }
-
-
 
 
 /* General container styling */
